force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Collaborator__c/Plant_Collaborator__c.object-meta.xml
<CustomObject>
    <description>PR1064302-225 : Object to store Plant backup admins for each plant
PR1064302-468 : Updated Name as Plant Collaborator</description>
    <label>Plant Collaborator</label>
    <nameField>
        <displayFormat>PBA-{0000}</displayFormat>
        <label>Plant Backup Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Collaborators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>