force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Collaborator__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Collaborator_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Read only</fullName>
            </value>
            <value>
                <fullName>Read/Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>