force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Collaborator__c/fields/Collaborator_Type__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Type__c</fullName>
    <description>Any collaborator working on a plant with a defined access.</description>
    <label>Collaborator Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backup Plant Admin</fullName>
            </value>
            <value>
                <fullName>Plant Viewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>