force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Collaborator__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipName>Plant_Backup_Admins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>