force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Collaborator__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>