force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Collaborator__c/validationRules/Lock_User_Field_After_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_User_Field_After_Populated</fullName>
    <active>true</active>
    <description>Prevents all updates to the User__c field once an initial value has been set.</description>
    <errorConditionFormula>AND(
    NOT( $Setup.GWB_Switch__c.Bypass_VRs__c ),
    ISCHANGED(User__c),
    NOT(ISBLANK(PRIORVALUE(User__c)))
)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>The User field cannot be changed once it has been assigned.</errorMessage>
</ValidationRule>